force-app/main/default/objects/Opportunity/fields/isCompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>isCompanyAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCompanyAddress</label>
    <type>Checkbox</type>
</CustomField>