force-app/main/default/objects/Opportunity/fields/IsSecondTest__c.field-meta.xml
<CustomField>
    <fullName>IsSecondTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSecondTest</label>
    <type>Checkbox</type>
</CustomField>