force-app/main/default/objects/Opportunity/fields/isSetUpFederalTaxes__c.field-meta.xml
<CustomField>
    <fullName>isSetUpFederalTaxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSetUpFederalTaxes</label>
    <type>Checkbox</type>
</CustomField>