force-app/main/default/objects/Opportunity/fields/isTypeOfAddress__c.field-meta.xml
<CustomField>
    <fullName>isTypeOfAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTypeOfAddress</label>
    <type>Checkbox</type>
</CustomField>